--- a/mercury-server/application.properties
+++ b/mercury-server/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Fri Nov 05 23:49:47 CST 2010
+#Sun Nov 21 16:05:05 CST 2010
 app.grails.version=1.3.5
 app.name=mercury-server
 app.servlet.version=2.4
 app.version=0.1
 plugins.hibernate=1.3.5
+plugins.mail=0.9
 plugins.spring-security-core=1.0.1
 plugins.tomcat=1.3.5
