--- a/mercury-server/application.properties
+++ b/mercury-server/application.properties
@@ -1,10 +1,11 @@
 #Grails Metadata file
-#Sun Nov 21 16:05:05 CST 2010
-app.grails.version=1.3.5
+#Fri Mar 18 23:51:38 CST 2011
+app.grails.version=1.3.7
 app.name=mercury-server
 app.servlet.version=2.4
 app.version=0.1
-plugins.hibernate=1.3.5
+plugins.hibernate=1.3.7
 plugins.mail=0.9
+plugins.spring-mobile=0.3
 plugins.spring-security-core=1.0.1
-plugins.tomcat=1.3.5
+plugins.tomcat=1.3.7
