--- a/mercury-server/application.properties
+++ b/mercury-server/application.properties
@@ -1,11 +1,12 @@
 #Grails Metadata file
-#Thu Jun 23 15:57:33 CDT 2011
-app.grails.version=1.3.7
+#Fri Aug 05 23:52:01 CDT 2011
+app.grails.version=2.0.0.M1
 app.name=mercury-server
 app.servlet.version=2.4
 app.version=0.1
-plugins.hibernate=1.3.7
+plugins.hibernate=2.0.0.M1
 plugins.mail=0.9
 plugins.spring-mobile=0.3
-plugins.spring-security-core=1.1.3
-plugins.tomcat=1.3.7
+plugins.spring-security-core=1.2
+plugins.svn=1.0.0.M1
+plugins.tomcat=2.0.0.M1
